# morons

./: .gitignore  20-morons.code-workspace  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tele.yml
local-addons/sample_module/: __manifest__.py
local-addons/sample_module/models/: models.py
local-addons/sample_module/security/: ir.model.access.csv
