[project]
name = "20-morons"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "hglong16", email = "intihad.vuong@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff~=0.0.264"]

[tool.ruff]
select = ["E", "F"]
ignore = ["F401"]
